# pyspedas

./: pyproject.toml
qudsi_codes/: .~lock.brst_intervals.csv#  brst_intervals_closest.csv  brst_segment_test.py  jet_reversal_checks.py  mms_brst_intervals.csv  simon.py
qudsi_codes/pydata/: .~lock.mms_burst_data_segment.csv#  mms_brst_intervals.pickle  mms_burst_data_segment.csv
