[tool.poetry]
name = "pyspedas_test"
version = "0.1.0"
description = ""
authors = ["Ramiz Qudsi <qudsiramiz@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
pyspedas = "^1.4.44"
matplotlib = "3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
